[metadata]
name = rdo-ramdisk-tools
summary = Tools for use on RDO ramdisks
version = 0.1
description-file =
    README.rst
author = Dmitry Tantsur
author-email = dtantsur@redhat.com
home-page = http://www.redhat.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[entry_points]
console_scripts =
    ironic-cardiff = rdo_ramdisk_tools.ironic_cardiff:main
