[metadata]
name = ahc-tools
summary = Tools for RDO-manager automatic health checks
version = 0.1
description-file =
    README.rst
author = John Trowbridge
author-email = trown@redhat.com
home-page = http://www.redhat.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages = ahc_tools

[entry_points]
console_scripts =
    ahc-report = ahc_tools.report:main
